--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
     "joi": "^17.13.3",
     "next": "14.2.5",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "styled-components": "^6.1.12"
   },
