--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
+    "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "next": "14.2.5",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -26,7 +29,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
